[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/jogador.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/cena_principal.gd" type="Script" id=2]
[ext_resource path="res://scenes/inimigo.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/gameover.wav" type="AudioStream" id=5]
[ext_resource path="res://sprites/House In a Forest Loop.ogg" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="cena_principal" type="Node"]
script = ExtResource( 2 )
Inimigo = ExtResource( 3 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0392157, 0.529412, 0.521569, 1 )

[node name="iniciottimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="pontuacaotimer" type="Timer" parent="."]
wait_time = 2.0

[node name="inimigotimer" type="Timer" parent="."]
wait_time = 0.5

[node name="jogador" parent="." instance=ExtResource( 1 )]

[node name="posicaoinicial" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="caminhoinimigo" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="spawninimigo" type="PathFollow2D" parent="caminhoinimigo"]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="musica" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="sommorte" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="timeout" from="iniciottimer" to="." method="_on_iniciottimer_timeout"]
[connection signal="timeout" from="pontuacaotimer" to="." method="_on_pontuacaotimer_timeout"]
[connection signal="timeout" from="inimigotimer" to="." method="_on_inimigotimer_timeout"]
[connection signal="hit" from="jogador" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="novo_jogo"]
